--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.DesmosCloneJavaFirst"
         tools:targetApi="31">
         <activity
-            android:name=".Register"
+            android:name=".SignUp"
             android:exported="false" />
         <activity
             android:name=".Login"
