--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,14 @@
         android:theme="@style/Theme.DesmosCloneJavaFirst"
         tools:targetApi="31">
         <activity
+            android:name=".graphingCalculator"
+            android:exported="false" />
+        <activity
+            android:name=".graphingCalculatorActivity"
+            android:exported="false"
+            android:label="@string/title_activity_graphing_calculator"
+            android:theme="@style/Theme.DesmosCloneJavaFirst" />
+        <activity
             android:name=".SignUpActivity"
             android:exported="false" />
         <activity
