created new activity Forgot password activity (that is not yet fully working but it might work later when I fully connect it to the firebase ~ido)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.DesmosCloneJavaFirst"
         tools:targetApi="31">
-
+        <activity
+            android:name=".ForgotPasswordActivity"
+            android:exported="false" />
         <activity
             android:name=".GraphingCalculatorActivity"
             android:exported="false"
