--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,12 +22,14 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.DesmosCloneJavaFirst"
         tools:targetApi="31">
-        <activity
-            android:name=".activities.AlarmClockActivity"
-            android:exported="false" />
-        <activity
-            android:name=".activities.ExplanationForPolynomialFunctionsActivity"
-            android:exported="false" />
+        <service android:name=".services.BackgroundMusicService" />
+
+<!--        <activity-->
+<!--            android:name=".activities.AlarmClockActivity"-->
+<!--            android:exported="false" />-->
+<!--        <activity-->
+<!--            android:name=".activities.ExplanationForPolynomialFunctionsActivity"-->
+<!--            android:exported="false" />-->
         <activity
             android:name=".activities.ForgotPasswordActivity"
             android:exported="false" />
