--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,12 +24,10 @@
         tools:targetApi="31">
         <service android:name=".services.BackgroundMusicService" />
 
-<!--        <activity-->
-<!--            android:name=".activities.AlarmClockActivity"-->
-<!--            android:exported="false" />-->
-<!--        <activity-->
-<!--            android:name=".activities.ExplanationForPolynomialFunctionsActivity"-->
-<!--            android:exported="false" />-->
+
+        <activity
+            android:name=".activities.ExplanationForPolynomialFunctionsActivity"
+            android:exported="false" />
         <activity
             android:name=".activities.ForgotPasswordActivity"
             android:exported="false" />
